--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "1.0.4",
   "homepage": "http://startbootstrap.com/template-overviews/creative",
   "author": "Start Bootstrap",
+  "scripts": {
+    "watch": "grunt watch"
+  },
   "license": {
     "type": "MIT",
     "url": "https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE"
@@ -11,6 +14,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-banner": "~0.2.3",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-less": "~0.11.4",
     "grunt-contrib-uglify": "~0.5.1",
     "grunt-contrib-watch": "~0.6.1"
